[tool.poetry]
name = "likelihood-free-hyperpriors-test"
version = "0.1.0"
description = ""
authors = ["James Bristow <jbris@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
pymc = "^5.22.0"
pyabc = "^0.12.15"
gpy = "^1.13.2"
elfi = {git = "https://git@github.com/elfi-dev/elfi.git", rev = "a331349dd603f78a7ac444226fb3bd08d4e41fc0"}

[tool.poetry.group.docs.dependencies]
sphinx-rtd-theme = "^3.0.1"
sphinx = "^8.1.3"
sphinx-argparse = "^0.5.2"
sphinxcontrib-applehelp = "^2.0.0"
sphinxcontrib-devhelp = "^2.0.0"
sphinxcontrib-htmlhelp = "^2.1.0"
sphinxcontrib-jsmath = "^1.0.1"
sphinxcontrib-qthelp = "^2.0.0"
sphinxcontrib-serializinghtml = "^2.0.0"
autodoc-pydantic = "^2.2.0"
myst-nb = "^1.1.2"


[tool.poetry.group.dev.dependencies]
ipython = "^8.28.0"
ipywidgets = "^8.1.5"
jupyter-core = "^5.7.2"
pytest = "^8.3.3"
coverage = "^7.6.3"
pytest-cov = "^5.0.0"
mypy = "^1.12.0"
pytest-mock = "^3.14.0"
pytest-xdist = "^3.6.1"
pytest-env = "^1.1.5"
types-pyyaml = "^6.0.12.20240917"
ruff = "^0.7.0"
jupyterlab = "^4.3.1"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
